css/style.css
* {
    box-sizing: border-box;
}

/* TYPOGRAPHY */

@font-face {
    font-family: montserrat;
    src: url(/fonts/Montserrat/Montserrat-Regular.ttf);
}

html {
    font-family: montserrat, serif;
    font-size: 12px;
}

body {
    margin: 0 auto;
}

a {
    text-decoration: none;
    color: #fff;
}

a:hover {
    text-decoration: none;
}

/* LAYOUT */

.main-layout {
    /* margin-left: 20px;
    margin-right: 20px; */
    width: 600px;
    margin: 0 auto;
}

/* COMPONENTS */

/* HEADER */

header {
    padding: 0 1.56rem 0 1.56rem;
    background-color: #ff7f00;
    height: 33px;
}

.logo img {
    object-fit: cover;
    height: 11px;
}

nav ul {
    gap: 10px;
    display: flex;
    z-index: 1;
}

nav ul li {
    height: 23px;
    text-transform: capitalize;
    line-height: 1.2em;
    letter-spacing: normal;
    color: #fff;
}

.btn-menu {
    display: none;
}

.gallery-a {
    color: #000;
    height: 100%;
}

.selected {
    box-shadow: inset black 0 -2px 0;
    color: #000;
}

/* MEME EDITOR */

canvas {
    cursor: grab;
    object-fit: cover;
    height: 100%;
}

.main-content {
    background-color: #e3e3e3;
    padding: 13px 25.5px;
    position: relative;
}

.main-controls {
    width: 270px;
    height: 270px;
    padding: 0 20px;
}

.meme-text {
    border: none;
    height: 30px;
}

.switch-add-delete, .font-size-align {
    padding: 10px;
    gap: 10px;
}

.switch-add-delete>button, .font-size-align>button {
    height: 30px;
    width: 30px;
}

.switch-add-delete>button>img, .font-size-align>button>img {
    object-fit: cover;
    height: 19px;
    object-position: center;
}

.download-share a, .share-modal a {
    background-color: #ff7f00;
    color: white;
    padding: 10px 10px;
    border-radius: 5px;
    /* font-size: 1.2rem; */
}

.download-share a:hover, .share-modal a:hover {
    background-color: #d36900;
}

.share-modal {
    height: 140px;
    width: 231px;
    position: absolute;
    background-color: #ffffff;
    top: 112px;
    right: 42px;
    border-radius: 10px;
    display: flex;
    align-items: center;
    flex-direction: column;
    justify-content: center;
    padding: 10px;
    gap: 37px;
}

.close-modal {
    position: absolute;
    top: 5px;
    right: 5px;
    cursor: default;
}

.stickers {
    height: 68px;
    width: 187px;
    background-color: white;
    align-self: center;
    margin-bottom: 10px;
}

.stickers img {
    object-fit: cover;
    height: 50px;
    margin: 3px;
    cursor: pointer;
}

/* MEMES TAB */

.memes img {
    height: 140px;
    padding: 10px;
}

/* SEARCH BAR */

.search-bar {
    background-color: #ffffff;
    min-height: 30px;
    padding: 0 26px;
}

.img-search {
    border: none;
    border-bottom: 1px solid black;
}

.search-words {
    gap: 20px;
    cursor: pointer;
}

.search-words li {
    font-size: 1rem;
}

.more-words {
    margin-bottom: 5px;
}

.upload-img{
    margin-top: 5px;
}

.file-input {
    background-color: #ff7f00;
    color: white;
    padding: 10px 10px;
    border-radius: 5px;
    font-size: 1.2rem;
}

/* GALLERY */

.main-gallery {
    background-color: #e3e3e3;
    padding: 13.5px 26px;
    margin-top: 5px;
    display: grid;
    justify-content: center;
    align-items: center;
    grid-template-columns: repeat(4, minmax(100px, 1fr));
    grid-gap: 10px;
    grid-auto-flow: dense;
}

.main-gallery .pic {
    object-fit: cover;
    max-height: 100%;
    max-width: 100%;
    margin: 3px;
    cursor: pointer;
}

.main-gallery .pic:nth-child(3n) {
    grid-column: span 2;
    grid-row: span 3;
}

/* FOOTER */

footer {
    height: 103.5px;
    background-color: #ff7f00;
}

.all-rights {
    color: #fff;
    font-weight: 100;
}

/* HELPERS */

/* flex */

.flex {
    display: flex;
}

.flex.align-center {
    align-items: center;
}

.flex.align-end {
    align-items: flex-end;
}

.flex.justify-center {
    justify-content: center;
}

.flex.space-between {
    justify-content: space-between;
}

.flex.space-even {
    justify-content: space-evenly;
}

.flex.column {
    flex-direction: column;
}

/* buttons helpers */

.clean-btn {
    background-color: unset;
    border: unset;
}

/* list helpers */

.clean-list {
    margin: 0;
    padding: 0;
    list-style-type: none;
}

@media (max-width: 620px) {
    .main-layout {
        width: 350px;
        /* margin: 0 auto; */
    }
    nav {
        position: relative;
    }
    nav ul {
        display: none;
    }
    body.menu-open nav ul {
        display: flex;
        flex-direction: column;
        position: absolute;
        top: 40px;
        background-color: #ff7f00;
        gap: unset;
        height: 170px;
        width: 130px;
        right: 0;
        border-radius: 5px;
        font-size: 2rem;
        justify-content: space-evenly;
        align-items: center;
    }
    body.menu-open nav ul li {
        height: auto;
    }
    .btn-menu {
        display: block;
        align-self: center;
    }
    .btn-menu::before {
        content: '☰';
    }
    body.menu-open .btn-menu::before {
        content: 'X';
    }
    .main-content {
        flex-direction: column;
    }
    .search-area {
        flex-direction: column;
        gap: 10px;
        padding: 5px;
        margin-bottom: 5px;
    }
    .search-area input {
        width: 160px;
    }

    .main-gallery {
        background-color: #e3e3e3;
        padding: 9px 15px;
        display: block;
    }
    .main-gallery .pic {
        object-fit: cover;
        height: 100%;
        margin: 2px;
        cursor: pointer;
    }
    canvas {
        margin-bottom: 10px;
    }
    .main-controls {
        height: auto;
    }
}

